syntax = "proto3";

package protobuf;
option go_package = "github.com/kaushik592k/equations/protobuf";

service ChemicalBalancer {
  rpc BalanceEquation (BalanceRequest) returns (BalanceResponse);
}

message BalanceRequest {
  string equation = 1; 
}

message BalanceResponse {
  string balanced_equation = 1; 
  string error_message = 2; 
}
